# personal-ai-employee

./: .gitignore  Company_Handbook.md  Dashboard.md  HANDOFF.md  LICENSE  README.md  agent_status.sh  brain_create_plan_skill.py  brain_email_query_with_mcp_skill.py  brain_execute_odoo_with_mcp_skill.py  brain_execute_social_with_mcp_skill.py  brain_execute_with_mcp_skill.py  brain_generate_accounting_audit_skill.py  brain_generate_daily_summary_skill.py  brain_generate_weekly_ceo_briefing_skill.py  brain_handle_mcp_failure_skill.py  brain_mcp_registry_refresh_skill.py  brain_monitor_approvals_skill.py  brain_odoo_query_with_mcp_skill.py  brain_ralph_loop_orchestrator_skill.py  brain_request_approval_skill.py  ecosystem.config.js  gmail_watcher_skill.py  linkedin_watcher_skill.py  mcp_helpers.py  odoo_watcher_skill.py  personal-ai-employee.service  personal-ai-web.service  pyproject.toml  requirements.txt  scheduler_runner.py  start_agent.sh  start_all.sh  start_wa_reply.sh  start_web.sh  stop_agent.sh  stop_all.sh  stop_wa_reply.sh  stop_web.sh  system_log.md  (+3 more)
Approved/: README.md  WEBPLAN_202602190813_LinkedIn_Create_Post_Text_Only_Ai_era_ag.md  WEBPLAN_202602190818_LinkedIn_Create_Post_with_Image_Ai_era.md  WEBPLAN_202602190903_LinkedIn_Create_Post_with_Image_Ai_era.md  WEBPLAN_202602190921_LinkedIn_Create_Post_with_Image_Ai_agent.md  WEBPLAN_202602190930_Gmail_Draft_Email_meeting_aprrovel.md  WEBPLAN_202602190932_Gmail_Send_Email_meeting.md  WEBPLAN_202602190955_Gmail_Send_Email_meeting_book_for_monday.md  WEBPLAN_202602191155_LinkedIn_Create_Post_with_Image_Agentic_.md  (+18 more)
(+307 files in other folders)
